# resolve_clipboard

./: Cargo.toml  README.md
src/: main.rs
